# hebrew-calendar

./: .gitignore  CLAUDE.md  Cargo.toml
.ralph/: IMPLEMENTATION_PLAN.md  PROMPT.md
.ralph/specs/: requirements.md
hebrew_app/: Cargo.toml  build.rs  tauri.conf.json
hebrew_app/frontend/: index.html
hebrew_app/src/: config.rs  main.rs
hebrew_app/src/api/: mod.rs
hebrew_app/src/gui/: mod.rs
hebrew_core/: Cargo.toml
hebrew_core/src/: calendar.rs  holidays.rs  lib.rs  parsha.rs  zmanim.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
