[package]
name = "tauri_app"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "^1", features = ["api-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hebrew_core = { path = "../hebrew_core" }
chrono = "0.4"

[build-dependencies]
tauri-build = { version = "^1", features = [] }
